--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libpcapng-sys/libpcapng"]
 	path = libpcapng-sys/libpcapng
 	url = https://github.com/stricaud/libpcapng.git
+[submodule "libpcapng"]
+	path = libpcapng
+	url = https://github.com/stricaud/libpcapng.git
