--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libpcapng-rs"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Bob R <nop@jumpesp.com>"]
 repository = "https://github.com/jumpespllc/libpcapng-rs"
@@ -11,7 +11,7 @@ categories = ["api-bindings"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libpcapng-sys = {path="libpcapng-sys"}
+libpcapng-sys = {path="libpcapng-sys", version = "0.1.0"}
 libc = "0.2.153"
 thiserror = "1.0.57"
 
